Bugfix: Truncated values in sortBy column (#5018)
* Add auto-sizing for sortBy column and make drop-down width 25% of screen width


* Change width of drop-down to 20%


* 30%

--- a/mlflow/server/js/src/experiment-tracking/components/ExperimentView.css
+++ b/mlflow/server/js/src/experiment-tracking/components/ExperimentView.css
@@ -373,7 +373,7 @@ span.error-message {
 }
 
 .ExperimentView .sort-select {
-    width: 200px;
+    width: auto;
 }
 
 .ExperimentView .start-time-select {
